--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@ canvas {
     display: flex;
     align-items: center;
     transform: translateX(0px);
+    overflow-y: scroll;
 }
 
 #barra_lateral {
@@ -140,11 +141,12 @@ canvas {
 }
 
 #contenido_bl {
-    overflow-y: scroll;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     padding-top: 20px;
+    background-color: #33334d;
+    padding-bottom: 35px;
 }
 
 .element_bl {
@@ -156,6 +158,7 @@ canvas {
 #agregar_operacion_bl {
     width: 100%;
     height: 50px;
+    background-color: #33334d;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -184,6 +187,7 @@ canvas {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #33334d;
 }
 
 #cont_input_agregar_op {
